--- a/node101.html
+++ b/node101.html
@@ -182,8 +182,8 @@ var kittySchema = mongoose.Schema({
 Everything in Mongoose starts with a 
 <A NAME="tex2html426"
   HREF="http://mongoosejs.com/docs/guide.html">Schema</A>. 
-Each schema maps to a <A NAME="11996"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
-<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12001"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
+Each schema maps to a <A NAME="11998"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
+<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12003"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
 
 <P>
 So far so good. 
@@ -252,6 +252,20 @@ fluffy.save(function (err, fluffy) {
   if (err) return console.error(err);
   fluffy.speak();
 });
+</PRE>
+
+<P>
+Say time goes by and we want to display all the kittens we've seen. 
+
+<P>
+We can access all of the kitten documents through our <code>Kitten</code> model.
+
+<P>
+<PRE>
+Kitten.find(function (err, kittens) {
+  if (err) return console.error(err);
+  console.log(kittens)
+})
 </PRE>
 
 <P>
