--- a/node101.html
+++ b/node101.html
@@ -182,8 +182,8 @@ var kittySchema = mongoose.Schema({
 Everything in Mongoose starts with a 
 <A NAME="tex2html426"
   HREF="http://mongoosejs.com/docs/guide.html">Schema</A>. 
-Each schema maps to a <A NAME="11998"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
-<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12003"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
+Each schema maps to a <A NAME="12000"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
+<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12005"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
 
 <P>
 So far so good. 
@@ -267,6 +267,19 @@ Kitten.find(function (err, kittens) {
   console.log(kittens)
 })
 </PRE>
+
+<P>
+We just logged all of the kittens in our <code>db</code> to the console. 
+
+<P>
+If we want to filter our kittens by name, Mongoose supports MongoDBs rich querying syntax.
+
+<P>
+<PRE>
+Kitten.find({ name: /^Fluff/ }, callback)
+</PRE>
+This performs a search for all documents with a name property that begins with <code>"Fluff"</code> 
+and returns the result as an array of kittens to the <code>callback</code>.
 
 <P>
 
