--- a/node101.html
+++ b/node101.html
@@ -182,8 +182,8 @@ var kittySchema = mongoose.Schema({
 Everything in Mongoose starts with a 
 <A NAME="tex2html426"
   HREF="http://mongoosejs.com/docs/guide.html">Schema</A>. 
-Each schema maps to a <A NAME="12002"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
-<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12007"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
+Each schema maps to a <A NAME="12006"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
+<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12011"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
 
 <P>
 So far so good. 
@@ -336,6 +336,29 @@ var main = function() {
 }
 
 db.once('open', main);
+</PRE>
+Cuando lo ejecutamos obtenemos:
+<PRE>
+[~/javascript/mongoose]$ node getting-started.js 
+Abierta la conexión con MongoDB!
+Silence
+Meow name is Silence
+Meow name is fluffy
+fluffy guardado!
+[ { _id: 552fb8f77e6de9990a4e6747, name: 'fluffy', __v: 0 } ]
+Desconectando!
+</PRE>
+Si lo ejecutamos una segunda vez obtenemos:
+<PRE>
+[~/javascript/mongoose]$ node getting-started.js 
+Abierta la conexión con MongoDB!
+Silence
+Meow name is Silence
+Meow name is fluffy
+fluffy guardado!
+[ { _id: 552fb8f77e6de9990a4e6747, name: 'fluffy', __v: 0 },
+  { _id: 552fb8f987df0fa30ab92647, name: 'fluffy', __v: 0 } ]
+Desconectando!
 </PRE>
 
 <P>
