--- a/node9.html
+++ b/node9.html
@@ -164,7 +164,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2042"></A>
+   <A NAME="2043"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -455,7 +455,7 @@ CSS</A>
   
 
 <P>
-<A NAME="2071"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2073"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<A NAME="2072"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2074"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 
 <P>
 
@@ -504,25 +504,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2083"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2084"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2085"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2086"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2087"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2088"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2089"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2090"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2091"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2093"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2092"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2094"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -567,7 +567,7 @@ applies to:
 para encontrar las respuestas a las preguntas. 
 </I>
 <UL>
-<LI><A NAME="2099"></A><SPAN  CLASS="textbf">Descendant Selector</SPAN>:
+<LI><A NAME="2100"></A><SPAN  CLASS="textbf">Descendant Selector</SPAN>:
 
 <P>
 Dado el selector
@@ -591,7 +591,7 @@ element doesn't have to be an immediate
 child: there could be another element wrapping <code>.box</code>, 
 and the styles would still apply.
 </LI>
-<LI><A NAME="2101"></A><SPAN  CLASS="textbf">Child selector</SPAN> (targets immediate child elements):
+<LI><A NAME="2102"></A><SPAN  CLASS="textbf">Child selector</SPAN> (targets immediate child elements):
 
 <P>
 Dada esta regla
@@ -632,7 +632,7 @@ As a result, the styles will not apply to that element, even though it too has a
 
 <P>
 </LI>
-<LI>A general <A NAME="2103"></A><SPAN  CLASS="textbf">sibling combinator</SPAN> matches elements based on sibling (hermanos)
+<LI>A general <A NAME="2104"></A><SPAN  CLASS="textbf">sibling combinator</SPAN> matches elements based on sibling (hermanos)
 relationships. That is to say, the selected elements are beside each other in the HTML.
 
 <P>
@@ -660,7 +660,7 @@ There could be other elements in between the <code>&lt;h2&gt;</code> and
 &lt;/div&gt;
 </PRE>
 </LI>
-<LI>The <A NAME="2105"></A><SPAN  CLASS="textbf">adjacent sibling combinator</SPAN> uses the plus symbol (<code>+</code>), 
+<LI>The <A NAME="2106"></A><SPAN  CLASS="textbf">adjacent sibling combinator</SPAN> uses the plus symbol (<code>+</code>), 
 and is almost the same as the general sibling selector. 
 The difference is that the targeted element must be an immediate sibling, not just a general sibling. 
 
@@ -689,7 +689,7 @@ Also, if another element appeared between two paragraphs, the second paragraph o
 &lt;/div&gt;
 </PRE>
 </LI>
-<LI>The <A NAME="2107"></A><SPAN  CLASS="textbf">attribute selector</SPAN> 
+<LI>The <A NAME="2108"></A><SPAN  CLASS="textbf">attribute selector</SPAN> 
 targets elements based on the presence and/or value of HTML attributes, and is declared using square brackets.
 
 <P>
@@ -712,7 +712,7 @@ The attribute selector targets elements based on the presence and/or value of HT
   &lt;input type="submit"&gt;
 </PRE>
 </LI>
-<LI>A <A NAME="2109"></A><SPAN  CLASS="textbf">pseudo-class</SPAN> 
+<LI>A <A NAME="2110"></A><SPAN  CLASS="textbf">pseudo-class</SPAN> 
 uses a colon character to identify a pseudo-state that an element might be in.
 
 <P>
@@ -722,7 +722,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2111"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2112"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 
 <P>
@@ -733,7 +733,7 @@ This means that when the user hovers their mouse
 over an <code>&lt;a&gt;</code> element, the color property for that element will change to red. 
 
 <P>
-This type of pseudo-class is a <A NAME="2113"></A><SPAN  CLASS="textbf">dynamic pseudo-class</SPAN>, 
+This type of pseudo-class is a <A NAME="2114"></A><SPAN  CLASS="textbf">dynamic pseudo-class</SPAN>, 
 because it occurs only in response to user interaction—in this case,
 the mouse moving over the targeted element.
 
@@ -825,7 +825,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2125"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2126"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -850,7 +850,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2131"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2132"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -859,7 +859,7 @@ The <A NAME="2131"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2133"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2134"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -870,7 +870,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2135"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2136"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -882,7 +882,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2137"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2138"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -894,7 +894,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html34"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2141"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2142"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -908,7 +908,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2145"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2146"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -965,7 +965,7 @@ rule sets? Well, the border will become 3px wide
 
 <P>
 This happens because the second rule set uses shorthand to
-define the <code>border-style</code> as solid, but doesn’t define the other two properties (<code>border-width</code> and 
+define the <code>border-style</code> as solid, <SPAN  CLASS="textbf">but doesn’t define the other two properties</SPAN> (<code>border-width</code> and 
 <code>border-color</code>).
 
 <P>
@@ -1030,7 +1030,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2157"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2159"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2158"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2160"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1492,7 +1492,7 @@ suite('temperature', function() {
 </PRE>
 
 <P>
-The <A NAME="2542"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
+The <A NAME="2543"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
 
 <P>
 <PRE>
@@ -1508,8 +1508,8 @@ describe('Array', function(){
   });
 });
 </PRE>
-The <A NAME="2544"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
-<A NAME="2546"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
+The <A NAME="2545"></A><SPAN  CLASS="textbf">Chai should</SPAN> style allows for the same chainable assertions as the 
+<A NAME="2547"></A><SPAN  CLASS="textbf">expect interface</SPAN>, however it extends each object with a <code>should</code> 
 property to start your chain. 
 
 <P>
@@ -1520,7 +1520,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2552"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2553"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1636,7 +1636,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="2746"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2747"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
