--- a/node11.html
+++ b/node11.html
@@ -641,7 +641,7 @@ jQuery</A>
   HREF="http://jquery.com/download/">Descarga la librería</A>)
 
 <P>
-<A NAME="3394"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
+<A NAME="3396"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
 the client-side scripting of HTML. 
 
 <P>
@@ -662,9 +662,20 @@ use today
 
 <P>
 </LI>
-<LI>jQuery's syntax is designed to make it easier to navigate a document,
-select DOM elements, create animations, handle events, and develop Ajax
-applications. 
+<LI>jQuery's syntax is designed to make it easier 
+
+<UL>
+<LI>to navigate a document,
+</LI>
+<LI>select DOM elements, 
+</LI>
+<LI>create animations, 
+</LI>
+<LI>handle events, and 
+</LI>
+<LI>develop Ajax applications. 
+</LI>
+</UL>
 
 <P>
 </LI>
@@ -1103,7 +1114,7 @@ Ajax, jQuery y Sinatra</A>
 
 <P>
 JavaScript enables you to freely
-pass functions around to be executed at a later time. A <A NAME="3560"></A><SPAN  CLASS="textbf">callback</SPAN> is a
+pass functions around to be executed at a later time. A <A NAME="3562"></A><SPAN  CLASS="textbf">callback</SPAN> is a
 function that is passed as an argument to another function and is usually 
 executed
 after its parent function has completed. 
@@ -1548,11 +1559,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3742"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3744"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3744"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3746"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1833,7 +1844,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3754"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3756"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1882,7 +1893,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3927"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3929"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3929"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3931"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1902,8 +1913,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3931"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3933"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3933"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3935"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -2043,7 +2054,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html126"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3949"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3951"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
